--- a/index.html
+++ b/index.html
@@ -3,48 +3,61 @@
 <head>
   <title>Check the result</title>
   <style>
-    #main {
-      height: 100%;
-      width:  100%;
-      background-color: #800080; /* Replace #000 with your desired background color */
-      position: absolute;
-      background-image: none;
-    }
+  #main {
+    height: 100%;
+    width:  100%;
+    background-color: #800080; /* Replace #000 with your desired background color */
+    position: absolute;
+    background-image: none;
+  }
 
-    #inputs {
-      width: 24rem;
-      height: 28rem;
-      box-shadow: 10px 10px 15px coral;
-      position: relative;
-      margin: 6% auto;
-      border-radius: 1rem;
-      font-weight: bolder;
-      background-color: #FFA500;
-      padding: 8px;
-      color: white;
-      text-align: center;
-    }
+  #inputs {
+    width: 24rem;
+    height: 32rem;
+    box-shadow: 10px 10px 18px coral;
+    position: relative;
+    margin: 6% auto;
+    border-radius: 1rem;
+    font-weight: bolder;
+    background-color: #FF8C00;
+    padding: 8px;
+    color: white;
+    text-align: center;
+  }
 
-    input {
-      font-weight: bolder;
-      background-color: rgba(139,0,0);
-      color: white;
-      border: none;
-      margin: 10px;
-      padding: 10px;
-      box-shadow: 4px 4px 10px white;
-      border-radius: 9px;
-    }
+  input {
+    font-weight: bolder;
+    background-color: rgba(139,0,0);
+    color: white;
+    border: none;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 4px 4px 10px white;
+    border-radius: 9px;
+  }
 
-    p {
-      margin-top: 15px;
+  p {
+    margin-top: 15px;
+  }
+
+  .blinking-text {
+    animation: blinker 1s linear infinite;
+    background-color: #FFD700; /* Replace #FFD700 with your desired background color */
+    color: #800080; /* Replace #800080 with your desired text color */
+    padding: 4px;
+  }
+
+  @keyframes blinker {
+    50% {
+      opacity: 0;
     }
-  </style>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  }
+</style>
 </head>
 <body>
   <div id="main">
     <div id="inputs" align="center">
+      <h3>KYP COURSE EXAMINATION RESULT!!</h3>
       <h2>Enter your Learner Code and find out your exam result</h2>
       <input type="text" id="studentName" placeholder="Learner Code">
       <input type="button" onclick="checkResult()" value="Check your Result!">
