--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     #inputs {
       width: 24rem;
-      height: 34rem;
+      height: auto;
       box-shadow: 10px 10px 18px coral;
       position: relative;
       margin: 6% auto;
