--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     #inputs {
       width: 24rem;
-      height: auto;
+      height: 40rem;
       box-shadow: 10px 10px 18px coral;
       position: relative;
       margin: 6% auto;
       border-radius: 1rem;
       font-weight: bolder;
-      background-color: #FF8C00;
+      background-color: #DC143C;
       padding: 8px;
       color: white;
       text-align: center;
