--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
       width:  100%;
       background-color: #800080; /* Replace #000 with your desired background color */
       position: absolute;
-      background-image: none;
+      /* Add the background image */
+      background-image: url('Web.jpg');
+      /* Adjust the background image properties */
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     #inputs {
       width: 24rem;
-      height: 40rem;
+      height: 34rem;
       box-shadow: 10px 10px 18px coral;
       position: relative;
       margin: 6% auto;
       border-radius: 1rem;
       font-weight: bolder;
-      background-color: #DC143C;
+      background-color: #FF8C00;
       padding: 8px;
       color: white;
       text-align: center;
