--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       height: auto;
       margin-bottom: 15px;
     }
+
+    h2 {
+      margin-top: 8px; /* Increase or decrease this value to adjust line spacing */
+    }
   </style>
 </head>
 <body>
