--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
       height: auto;
       margin-bottom: 15px;
     }
+    #downloadButton {
+      font-weight: bolder;
+      background-color: rgba(0, 128, 0); /* Change the background color as desired */
+      color: white;
+      border: none;
+      margin: 8px;
+      padding: 8px;
+      box-shadow: 4px 4px 10px white;
+      border-radius: 9px;
+      text-align: center;
+    }
 
     h2 {
       margin-top: 8px; /* Increase or decrease this value to adjust line spacing */
@@ -80,8 +91,9 @@
       <p id="output"></p>
     </div>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.0.2/papaparse.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/pdfmake.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
